--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "prettify": "prettier --write",
-    "deploy": "npm run build && ./internals/scripts/deploy.sh"
+    "prettify": "prettier --write"
   },
   "browserslist": [
     "last 2 versions",
